added lib folder files

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
       <section id="entry-point4"></section>
 
     <!-- Wifi might be spotty, so we've downloaded these to `./lib` -->
-    <!-- <script src="lib/react.js"></script>
-    <script src="lib/react-dom.js"></script> -->
+    <script src="lib/react.js"></script>
+    <script src="lib/react-dom.js"></script>
 
     <!-- Alternatively: -->
-    <script src="https://unpkg.com/react@0.14.7/dist/react.min.js"
+    <!-- <script src="https://unpkg.com/react@0.14.7/dist/react.min.js"
                 integrity="sha384-zTm/dblzLXQNp3CgY+hfaC/WJ6h4XtNrePh2CW2+rO9GPuNiPb9jmthvAL+oI/dQ"
                 crossorigin="anonymous"></script>
     <script src="https://unpkg.com/react-dom@0.14.7/dist/react-dom.min.js"
                 integrity="sha384-ntqCsHbLdMxT352UbhPbT7fqjE8xi4jLmQYQa8mYR+ylAapbXRfdsDweueDObf7m"
-                crossorigin="anonymous"></script>
+                crossorigin="anonymous"></script> -->
 
     <script type="text/javascript">
     //ReactElement createElement(string/ReactClass type, [object props], [children ...])
