--- a/index.html
+++ b/index.html
@@ -10,18 +10,20 @@
     <section id="entry-point2"></section>
     <section id="entry-point3"></section>
       <section id="entry-point4"></section>
+        <section id="entry-point5"></section>
 
     <!-- Wifi might be spotty, so we've downloaded these to `./lib` -->
-    <script src="lib/react.js"></script>
-    <script src="lib/react-dom.js"></script>
+    <!-- <script src="lib/react.js"></script>
+    <script src="lib/react-dom.js"></script> -->
 
     <!-- Alternatively: -->
-    <!-- <script src="https://unpkg.com/react@0.14.7/dist/react.min.js"
+    <script src="https://unpkg.com/react@0.14.7/dist/react.min.js"
                 integrity="sha384-zTm/dblzLXQNp3CgY+hfaC/WJ6h4XtNrePh2CW2+rO9GPuNiPb9jmthvAL+oI/dQ"
                 crossorigin="anonymous"></script>
     <script src="https://unpkg.com/react-dom@0.14.7/dist/react-dom.min.js"
                 integrity="sha384-ntqCsHbLdMxT352UbhPbT7fqjE8xi4jLmQYQa8mYR+ylAapbXRfdsDweueDObf7m"
-                crossorigin="anonymous"></script> -->
+                crossorigin="anonymous"></script>
+                <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.js"></script>
 
     <script type="text/javascript">
     //ReactElement createElement(string/ReactClass type, [object props], [children ...])
@@ -107,6 +109,45 @@ var App = React.createClass({
 })
 
 ReactDOM.render(React.createElement(App, { notes: notes }), document.getElementById('entry-point4'))
+    </script>
+
+
+    <script type="text/babel">
+    var notes = [
+  { id: 1, content: 'Learn React' },
+  { id: 2, content: 'Get Lunch' },
+  { id: 3, content: 'Learn React Native' }
+]
+
+var Note = React.createClass({
+  render() {
+    return <li>{ this.props.content }</li>
+  }
+})
+
+var NotesList = React.createClass({
+  renderNote(note) {
+    return <Note key={ note.id } content={ note.content } />
+  },
+  render() {
+    return <ul>{ this.props.notes.map(this.renderNote) }</ul>
+  }
+})
+
+var App = React.createClass({
+  render() {
+    var notes = this.props.notes
+
+    return (
+      <section>
+        <h1>You have { notes.length }</h1>
+        <NotesList notes={ notes } />
+      </section>
+    )
+  }
+})
+
+ReactDOM.render(<App notes={ notes } />, document.getElementById('entry-point5'))
     </script>
   </body>
 </html>
